--- a/sass/layout/_crew.scss
+++ b/sass/layout/_crew.scss
@@ -67,7 +67,7 @@
 }
 @media (min-width: 768px) {
 	.crew {
-		background-image: url(../../img/crew/background-crew-tablet.jpg);
+		background-image: url(../img/crew/background-crew-tablet.jpg);
 		&__heading {
 			text-align: left;
 			font-size: 2rem;
